--- a/public/index.css
+++ b/public/index.css
@@ -55,6 +55,11 @@ button {
   border: none;
 }
 
+a {
+  text-decoration: none;
+  color: white;
+}
+
 #trainTrack {
   width: 50%;
   height: 100vh;
