--- a/public/playlist.css
+++ b/public/playlist.css
@@ -21,8 +21,16 @@ header {
 }
 
 .albums {
-  height: 100px;
-  overflow: scroll;  
+  height: 120px;
+  width: 100vw;
+  overflow: scroll;
+  text-align: center;
+}
+
+.albums img {
+  height: 75px;
+  width: 75px;
+  padding: 10px;
 }
 
 .main {
@@ -31,7 +39,7 @@ header {
 
 textarea {
   height: 30%;
-  width: 90%;
+  width: 90vw;
   margin: 20px 20px 20px 50px;
   border: 2px solid black;
   background-color: #EEEEEE;
