--- a/public/index.css
+++ b/public/index.css
@@ -6,6 +6,7 @@
 body {
   background-color: #EEEEEE;
   font-family: "avenirFont";
+  margin: 0;
 }
 
 header {
@@ -49,8 +50,9 @@ a {
 }
 
 #trainTrack {
+  position: relative;
   width: 100%;
-  height: 100vh;
+  height: 90vh;
   opacity: .2;
   z-index: -1;
   margin-top: -20px;
@@ -59,15 +61,14 @@ a {
 
 .albumArt {
   height: 20px;
-  width: 10%;
-  float: left;
+  width: 200px;
+  margin: 0 auto;
 }
 
 .albumArt img {
   z-index: 1;
-  height: 215px;
-  width: 215px;
-  margin-left: 240px;
+  height: 180px;
+  width: 180px;
   padding-top: 20px;
 }
 
@@ -79,6 +80,8 @@ footer {
   height: 40px;
   width: 100%;
   padding-top: 15px;
+  position: fixed;
+  bottom: 0;
 }
 
 .footcopy {
